@@ -17,7 +17,7 @@
 package org.graylog.plugins.pipelineprocessor.ast.expressions;
 
 import com.google.common.base.Joiner;
-
+import com.swrve.ratelimitedlogger.RateLimitedLog;
 import org.antlr.v4.runtime.Token;
 import org.graylog.plugins.pipelineprocessor.EvaluationContext;
 import org.graylog.plugins.pipelineprocessor.ast.exceptions.FunctionEvaluationException;
@@ -26,10 +26,11 @@ import org.graylog.plugins.pipelineprocessor.ast.functions.Function;
 import org.graylog.plugins.pipelineprocessor.ast.functions.FunctionArgs;
 import org.graylog.plugins.pipelineprocessor.ast.functions.FunctionDescriptor;
 
-import java.util.Map;
-import java.util.stream.Collectors;
+import static org.graylog.plugins.pipelineprocessor.processors.PipelineInterpreter.getRateLimitedLog;
 
 public class FunctionExpression extends BaseExpression {
+    private static final RateLimitedLog LOG = getRateLimitedLog(FunctionExpression.class);
+
     private final FunctionArgs args;
     private final Function<?> function;
     private final FunctionDescriptor descriptor;
@@ -60,6 +61,9 @@ public class FunctionExpression extends BaseExpression {
     @Override
     public Object evaluateUnsafe(EvaluationContext context) {
         try {
+            if (Boolean.TRUE.equals(function.descriptor().deprecated())) {
+                LOG.warn("Using deprecated function {}", function.descriptor().name());
+            }
             return descriptor.returnType().cast(function.evaluate(args, context));
         } catch (LocationAwareEvalException laee) {
             // the exception already has a location from the input source, simply propagate it.
@@ -90,6 +94,6 @@ public class FunctionExpression extends BaseExpression {
 
     @Override
     public Iterable<Expression> children() {
-        return args.getArgs().entrySet().stream().map(Map.Entry::getValue).collect(Collectors.toList());
+        return args.getArgs().values().stream().toList();
     }
 }
